--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -511,6 +511,7 @@
 		Traditional_Chinese:"曼哈頓計畫"
 		Ukrainian:"Мангеттенський проєкт"
 		German:"Manhattan-Projekt"
+		Polish:"Projekt Manhattan"
 }
 
 	"Chichen Itza":{
@@ -560,6 +561,7 @@
 		Traditional_Chinese:"允許建造核武器"
 		Ukrainian:"Доступна ядерна зброя"
 		German:"Erlaubt Kernwaffen"
+		Polish:"Umożliwia broń nuklearną"
 }
 
 	"Lighthouse":{
