--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -220,6 +220,7 @@
                 Korean:"초소형"
 		Czech:"Miniaturní"
 		Ukrainian:"Крихітний"
+		Polish:"Bardzo mały"
 }
 
 	"Small":{
@@ -236,6 +237,7 @@
 		Polish:"Mały"
 		Czech:"Malý"
 		Ukrainian:"Малий"
+		Polish:"Mały"
 }
 
 	"Medium":{
@@ -252,6 +254,7 @@
 		Polish:"Średni"
 		Czech:"Střední"
 		Ukrainian:"Середній"
+		Polish:"Średni"
 }
 
 	"Large":{
@@ -268,6 +271,7 @@
                 Korean:"대형"
 		Czech:"Velký"
 		Ukrainian:"Великий"
+		Polish:"Duży"
 }
 
 	"Huge":{
@@ -284,6 +288,7 @@
 		Polish:"Ogromny"
 		Czech:"Obrovský"
 		Ukrainian:"Величезний"
+		Polish:"Ogromny"
 }
 
 
@@ -442,7 +447,7 @@
 		Traditional_Chinese:"電腦",
 		Russian:"ИИ"
 		Czech:"UI"
-		Polish:"Computer"
+		Polish:"Komputer"
 		Ukrainian:"ШІ"
 		German:"KI"
 }
@@ -777,6 +782,7 @@
 		Czech:"Vypadá to, že nelze vytvořit mapu dle vašeho zadání!"
 		Ukrainian:"Схоже, що неможливо створити мапу з обраними параметрами!"
 		German:"Mit den von dir angegebenen Parametern kann keine Karte erzeugt werden!"
+		Polish:"Wygląda na to że nie jesteśmy w stanie stworzyć mapy z podanymi przez Ciebie parametrami!"
 }
 
 	"Maybe you put too many players into too small a map?":{
@@ -788,6 +794,7 @@
 		Czech:"Nevložili jste příliš mnoho hráčů do moc malé mapy?"
 		Ukrainian:"Можливо забагато гравців на замаленьку мапу?"
 		German:"Vielleicht hast du zu viele SpielerInnen in eine zu kleine Karte gepackt?"
+		Polish:"Może dodałeś za dużo graczy na małej mapie?"
 }
 
 	"No human players selected!":{
@@ -799,6 +806,7 @@
 		Ukrainian:"Не обрано людей-гравців!"
 		Russian:"Не выбраны игроки(люди)"
 		German:"Keine menschlichen SpielerInnen ausgewählt!"
+		Polish:"Nie wybrano żadnego ludzkiego gracza!"
 }
 
 
@@ -818,6 +826,7 @@
                 Korean:"현재 게임 저장"
 		Czech:"Aktuálně uložené hry"
 		Ukrainian:"Поточні збереження"
+		Polish:"Obecne zapisy"
 }
 
 	"Show autosaves":{
@@ -829,6 +838,7 @@
 		Ukrainian:"Показати автозбереження"
 		Russian:"Показать автосохранения"
 		German:"Zeige automatisch gespeicherte Spiele an"
+		Polish:"Pokaż autozapisy"
 }
 
 	"Saved game name":{
@@ -845,6 +855,7 @@
                 Korean:"저장된 게임 이름"
 		Czech:"Uložit hru jako"
 		Ukrainian:"Назва збереженої гри"
+		Polish:"Nazwa zapisanej gry"
 }
 
 	"Copy to clipboard":{ //this button exsits in "Save game" and "Map editor", it means that we can copy "current game status" to clipboard, "current game status" is not a existing file but some words.
@@ -858,6 +869,7 @@
 		Czech:"Zkopírovat do schránky"
 		Ukrainian:"Зберегти до буфера обміну"
 		German:"In die Zwischenablage kopieren"
+		Polish:"Skopiuj do schowka"
 }
 
 	"Copy saved game to clipboard":{//this button exsits in "Load game",it means that we have a "saved game" file, so we can copy its data to clipboard.
@@ -869,6 +881,7 @@
 		Ukrainian:"Копіювати збережену гру до буфера обміну"
 		Russian:"Копировать сохранённую игру в буфер обмена"
 		German:"Gespeichertes Spiel in die Zwischenablage kopieren"
+		Polish:"Skopiuj zapisaną grę do schowka"
 }
 
 	"Could not load game":{
@@ -885,6 +898,7 @@
                 Korean:"게임을 불러올 수 없습니다"
 		Czech:"Nepodařilo se načíst hru"
 		Ukrainian:"Неможливо завантажити гру"
+		Polish:"Nie udało się wczytać gry"
 }
 
 	"Load [saveFileName]":{ // as in "Load SaveFile2"
@@ -901,6 +915,7 @@
                 Korean:"불러오기 [saveFileName]",
 		Czech:"Načíst hru [saveFileName]"
 		Ukrainian:"Завантажити [saveFileName]"
+		Polish:"Wczytaj [saveFileName]"
 }
 
 	"Delete save":{
@@ -917,6 +932,7 @@
                 Korean:"저장 삭제"
 		Czech:"Smazat uloženou hru"
 		Ukrainian:"Видалити збережене"
+		Polish:"Usuń zapis"
 }
 
 	"Saved at":{
@@ -933,6 +949,7 @@
                 Korean:"저장 시간"
 		Czech:"Uloženo jako"
 		Ukrainian:"Збережено до"
+		Polish:"Zapisz jako"
 }
 
 	////////////// Load map
@@ -946,6 +963,7 @@
 		Czech:"Načíst mapu"
 		Ukrainian:"Завантажити мапу"
 		German:"Lade Karte"
+		Polish:"Wczytaj mapę"
 }
 
 	"Are you sure you want to delete this map?":{
@@ -957,6 +975,7 @@
 		Czech:"Jste si jistý(á), že chcete smazat tuto mapu?"
 		Ukrainian:"Ви впевнені, що бажаєте видалити цю мапу?"
 		German:"Karte wirklich löschen?"
+		Polish:"Czy na pewno chcesz usunąc tą mapę?"
 }
 
 	"Upload map":{
@@ -968,6 +987,7 @@
   		Czech:"Nahrát mapu"
 		Ukrainian:"Вивантажити мапу"
 		German:"Karte hochladen"
+		Polish:"Prześlij mapę"
 }
 
 	"Could not upload map!":{
@@ -979,6 +999,7 @@
 		Czech:"Nelze nahrát mapu!"
 		Ukrainian:"Неможливо вивантажити мапу!"
 		German:"Kann Karte nicht hochladen!"
+		Polish:"Nie udało się przesłać mapy"
 }
 
 	"Map uploaded successfully!":{
@@ -989,6 +1010,7 @@
 		Simplified_Chinese:"地图上传成功！"
 		Russian:"Карта успешно загружена!"
 		German:"Karte hochladen war erfolgreich!"
+		Polish:"Mapa została przesłana pomyślnie"
 },
 
 
@@ -1009,6 +1031,7 @@
                 Korean:"설정"
 		Czech:"Možnosti"
 		Ukrainian:"Налаштування"
+		Polish:"Ustawienia"
 }
 
 	"Display options":{
@@ -1026,6 +1049,7 @@
                 Korean:"해상도 설정"
 		Czech:"Zobrazit možnosti"
 		Ukrainian:"Налаштування екрану"
+		Polish:"Ustawienia wyświetlacza"
 }
 
 	"Turns between autosaves":{
@@ -1039,6 +1063,7 @@
 		Czech:"Počet kol mezi automatickým uložením hry"
 		Ukrainian:"Ходів між автозбереженням"
 		German:"Runden bis zum nächsten automatischen Speichern"
+		Polish:"Przełącza pomiędzy autozapisami"
 }
 
 	"Sound effects volume":{
@@ -1051,6 +1076,7 @@
 		Czech:"Hlasitost zvuků"
 		Ukrainian:"Гучність звуків"
 		German:"Lautstärke Soundeffekte"
+		Polish:"Poziom głośności efektów"
 }
 
 	"Music volume":{
@@ -1059,6 +1085,7 @@
 		Traditional_Chinese:"音樂音量"
 		Czech:"Hlasitost hudby"
 		German:"Lautstärke Musik"
+		Polish:"Poziom głośności muzyki"
 }
 
 	"Download music":{
@@ -1067,6 +1094,7 @@
 		Traditional_Chinese:"下載音樂"
 		Czech:"Stáhnout hudbu"
 		German:"Musik herunterladen"
+		Polish:"Pobierz muzykę"
 }
 
 	"Downloading...": {
@@ -1075,6 +1103,7 @@
 		Simplified_Chinese:"下载中..."
 		Traditional_Chinese:"下載中..."
 		German:"Lade herunter..."
+		Polish:"Pobieranie..."
 }
 
 	"Could not download music!": {
@@ -1083,6 +1112,7 @@
 		Simplified_Chinese:"无法下载音乐！"
 		Traditional_Chinese:"無法下載音樂！"
 		German:"Kann Musik nicht herunterladen!"
+		Polish:"Nie udało się pobrać muzyki!"
 }
 
 	"Show":{
@@ -1100,6 +1130,7 @@
                 Korean:"보이기"
 		Czech:"Zobrazit"
 		Ukrainian:"Показати"
+		Polish:"Pokaż"
 }
 
 	"Hide":{
@@ -1117,6 +1148,7 @@
                 Korean:"숨기기"
 		Czech:"Schovat"
 		Ukrainian:"Сховати"
+		Polish:"Ukryj"
 }
 
 	"Show worked tiles":{
@@ -1127,6 +1159,7 @@
 		Ukrainian:"Показати оброблювані клітини"
 		Russian:"Показать обрабатываемые клетки"
 		German:"Zeige bewirtschaftete Felder an"
+		Polish:"Pokaż pracujące pola"
 }
 
 	"Show resources and improvements":{
@@ -1137,6 +1170,7 @@
 		Ukrainian:"Показати ресурси і вдосконалення"
 		Russian:"Показать ресурсы и улучшения"
 		German:"Zeige Ressourcen und Verbesserungen an"
+		Polish:"Pokaż zasoby i ulepszenia"
 }
 
 	"Check for idle units":{
@@ -1150,6 +1184,7 @@
 		Korean:"턴이 끝나기 전에 미행동 유닛 보기"
 		Czech:"Kontrolovat zahálející jednotky"
 		Ukrainian:"Перевіряти неробочі підрозділи"
+		Polish:"Sprawdź jednostki czekające na rozkazy"
 }
 
 	"Move units with a single tap":{
@@ -1162,6 +1197,7 @@
                 Korean:"한 번의 탭으로 유닛 이동"
 		Czech:"Pohyb jednotek na jeden klik"
 		Ukrainian:"Переміщення підрозділів одним натиском"
+		Polish:"Przemieść jednostki jednym dotykiem"
 }
 
 	"Show tutorials":{
@@ -1173,6 +1209,7 @@
 		Czech:"Zobrazit tutoriál"
 		Ukrainian:"Показати навчання"
 		German:"Zeige Tutorials"
+		Polish:"Pokaż przewodnik"
 }
 
 	"Auto-assign city production":{
@@ -1184,6 +1221,7 @@
 		Czech:"Automatické přiřazení produkce ve městě"
 		Ukrainian:"Автомачне виробництво у містах"
 		German:"Automatische Zuordnung der Stadtproduktion"
+		Polish:"Automatycznie przypisz produkcję miastu"
 }
 
 	"Auto-build roads":{
@@ -1195,6 +1233,7 @@
 		Ukrainian:"Автоматичне будівництво доріг"
 		Russian:"Автоматическое строительство дорог"
 		German:"Automatischer Straßenbau"
+		Polish:"Automatycznie buduj drogi"
 }
 
 	"Show minimap":{
@@ -1206,6 +1245,7 @@
 		Czech:"Zobrazit minimapu"
 		Ukrainian:"Показати мінімапу"
 		German:"Zeige die Mini-Map"
+		Polish:"Pokaż minimapę"
 }
 
 	"Show pixel units":{ // not sure of the context....examples?
@@ -1216,6 +1256,7 @@
 		Czech:"Zobrazit jednotky jako pixely"
 		Russian:"Показать текстуру юнитов"
 		German:"Zeige Pixel Einheiten"
+		Polish:"Pokaż jednostki jako pixele"
 }
 
 	"Show pixel improvements":{ // not sure of the context....examples?
@@ -1226,6 +1267,7 @@
 		Czech:"Zobrazit vylepšení jako pixely"
 		Russian:"Показать текстуру улучшений"
 		German:"Zeige Pixel Verbesserungen"
+		Polish:"Pokaż ulepszenia jako pixele"
 }
 
 	"Fontset":{
@@ -1237,6 +1279,7 @@
 		Czech:"Typ písma"
 		Ukrainian:"Шрифт"
 		German:"Schriftart"
+		Polish:"Zestaw czcionek"
 }
 
 }
